# SuPA

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  CLAUDE.md  Dockerfile  README.md  README.rst  VERSION.txt  api.html  backend.html  changelog.html  configuration.html  development.html  documentation.html  fmt_code.sh  genindex.html  index.html  installation.html  objects.inv  port_mapping.example.yaml  py-modindex.html  pyproject.toml  pytest.ini  renovate.json  requirements.txt  running.html  search.html  searchindex.js  setup.cfg  setup.py  supa.env  update_docs.sh  update_docs_github.sh
.github/: dependabot.yml  renovate.json
.github/workflows/: build-push-container.yml  codeql-analysis.yml  gh-pages.yml  pull-request.yml  run-linting-tests.yml  run-unit-tests.yml
_sources/: configuration.rst.txt  development.rst.txt  documentation.rst.txt
_static/css/: custom.css
chart/: Chart.yaml  values.yaml
chart/templates/: configmap.yaml  environment-configmap.yaml  ingress.yaml  mcp-configmap.yaml  secret-provider-class.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
charts/SuPA/: Chart.yaml  values.yaml
charts/SuPA/templates/: _helpers.tpl  configmap.yaml  service.yaml  statefulset.yaml
charts/SuPA/templates/tests/: test-connection.yaml
docker/: application.properties  docker-compose.yml  polynsi-keystore.jks  polynsi-truststore.jks  supa.env
docs/: Makefile  api.rst  backend.rst  conf.py  configuration.rst  development.rst  documentation.rst  index.rst  installation.rst  running.rst
docs/_build/doctrees/: api.doctree  backend.doctree  changelog.doctree  development.doctree  documentation.doctree  environment.pickle  index.doctree  installation.doctree  running.doctree
docs/_build/html/: .buildinfo  api.html  changelog.html  configuration.html  development.html  documentation.html  genindex.html  installation.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  changelog.doctree  configuration.doctree  development.doctree  documentation.doctree  index.doctree  installation.doctree
docs/_build/html/_sources/: api.rst.txt  backend.rst.txt  configuration.rst.txt  development.rst.txt  installation.rst.txt
protos/: .connection_requester.proto.swp  connection_common.proto  connection_provider.proto  connection_requester.proto  policy.proto
src/supa/: __init__.py  const.py  db.py  main.py  utils.py
src/supa/buildtools/: backend.py
src/supa/connection/: __init__.py  error.py  fsm.py  requester.py
src/supa/connection/provider/: server.py
src/supa/db/: model.py  session.py  sqlite.py  utils.py
src/supa/documents/: __init__.py  discovery.py  healthcheck.py  topology.py
src/supa/job/: __init__.py  dataplane.py  lifecycle.py  provision.py  query.py  reserve.py  shared.py
src/supa/mcp/: README.md  config.py  port_mapping.py  queries.py  server.py  tools.py
src/supa/nrm/: backend.py
src/supa/nrm/backends/: ciena8190.py  clab_aristaCEOS4.env  clab_aristaCEOS4.py  example.env  example.py  nso.env  nso.env.example  nso.py  paristaEOS4-untested.py  paristaEOS4.env  paristaEOS4.py  surf.env  surf.py
src/supa/nrm/backends/clab_aristaCEOS4_configs/: clab_aristaCEOS4.env  stps_config.yml
src/supa/nrm/backends/nso_service_model/: README.md
src/supa/nrm/backends/nso_service_model/nsi-circuit/: README.md  package-meta-data.xml
src/supa/nrm/backends/nso_service_model/nsi-circuit/python/nsi-circuit/: main.py
src/supa/nrm/backends/nso_service_model/nsi-circuit/src/: Makefile
src/supa/nrm/backends/nso_service_model/nsi-circuit/src/yang/: nsi-circuit.yang
src/supa/nrm/backends/nso_service_model/nsi-circuit/templates/: nsi-circuit-template.xml
src/supa/protos/: connection_provider.proto  services.proto
src/supa/util/: bandwidth.py  converter.py  find.py  functional.py  nsi.py  nso.py  timestamp.py  type.py  vlan.py
test_data/: .gitignore
test_data/3ceosvlan/: 3ceosvlan.clab.yml
tests/: conftest.py  test_mcp_cli.py  test_mcp_import.py  test_mcp_port_mapping.py  test_mcp_queries.py  test_mcp_queries_db.py  test_mcp_server.py  test_mcp_tools.py  test_statemachine_migration.py  test_utils.py
tests/connection/: test_fsm.py
tests/connection/provider/: test_server.py
tests/documents/: test_discovery.py  test_refresh_topology.py  test_topology.py
tests/functional/: test_scenarios.py
tests/job/: conftest.py  fake_servicer.py  test_dataplane.py  test_lifecycle.py  test_provision.py  test_reserve.py  test_statemachine_migration.py
tests/nrm/: conftest.py  test_backends.py  test_surf.py
tests/shared/: state_machine.py
tests/util/: test_functional.py  test_nsi.py  test_vlan.py
