[build-system]
# Part of the installation process is the generation of Python code from protobuf/gRPC definitions.
# For that we need to have `grpcio-tools` around *before* `setup.py` is executed. The version number of `grpcio-tools`
# should match that of `grpcio` in `setup.cfg`. Actual code generation is done from within `setup.py` in a custom
# Command class.
requires = [
    "setuptools>=65.5.0",
    "wheel",
    "grpcio-tools==1.78.1",
    "mypy_protobuf",
]
build-backend = "buildtools.backend"
backend-path = ["src/supa"]


[project]
name = "supa"
version = "0.4.4.dev1"
dependencies = [
  "grpcio==1.78.1",
  "mypy-protobuf==5.0.0",
  "structlog==25.5.0",
  "colorama==0.4.6",
  "click==8.3.1",
  "pydantic-settings==2.13.1",
  "python-statemachine==3.0.0",
  "sqlalchemy==2.0.46",
  "apscheduler==3.11.2",
  "tabulate==0.9.0",
  "more-itertools==10.8.0",
  "protobuf==6.33.5",
  "python-nso-client==0.1.3",
  "requests==2.32.5",
  "lxml==6.0.2",
  "lxml-stubs==0.5.1",
  "cherrypy==18.10.0",
  "htmlgen==2.0.0",
  "paramiko==4.0.0",
  "pytz==2025.2",
  "grpcio-tools==1.78.1",
  "psycopg2-binary==2.9.11",
]
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Guido Kollerie", email = "guido@kollerie.com"},
    {name = "Hans Trompert", email = "hans.trompert@surf.nl"},
]
maintainers = [
    {name = "Hans Trompert"},
]
description = "The SURF ultimate Provider Agent (SuPA)"
readme = "README.rst"
keywords = [
    "NSI",
    "Python",
    "uPA",
    "NSA",
    "gRPC",
    "protobuf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
license = "Apache-2.0"
license-files = ["LICENSE.txt"]

[project.urls]
#Homepage = "https://example.com"
Documentation = "https://workfloworchestrator.org/SuPA"
Repository = "https://github.com/workfloworchestrator/SuPA.git"
Issues = "https://github.com/workfloworchestrator/SuPA/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "bandit==1.9.3",
    "black==26.1.0",
    "flake8==7.3.0",
    "flake8-bandit==4.1.1",
    "flake8-bugbear==25.11.29",
    "flake8-builtins==3.1.0",
    "flake8-comprehensions==3.17.0",
    "flake8-docstrings==1.7.0",
    "flake8-implicit-str-concat==0.6.0",
    "flake8-print==5.0.0",
    "flake8-rst==0.8.0",
    "flake8-string-format==0.3.0",
    "grpc-stubs==1.53.0.6",
    "grpcio-tools==1.78.1",
    "isort==8.0.0",
    "mypy==1.19.1",
    "pip-tools==7.5.3",
    "pre-commit==4.5.1",
    "protobuf==6.33.5",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-grpc==0.8.0",
    "pytest-xdist==3.8.0",
    "types-paramiko==4.0.0.20250822",
    "types-pytz==2025.2.0.20251108",
    "types-requests==2.32.4.20260107",
    "types-setuptools==82.0.0.20260210",
    "types-tabulate==0.9.0.20241207",
    "tzdata==2025.3",
]
doc = [
    "sphinx==9.0.4",
    "sphinx-click==6.2.0",
    "sphinx-rtd-theme==3.1.0",
]

[project.scripts]
supa = "supa.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"supa.protos" = ["*.proto"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"etc/supa" = ["supa.env", "src/supa/nrm/backends/*.env"]

[tool.pytest]
minversion = "9.0"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = [
    "src/supa",
]
omit = [
    "src/supa/grpc_nsi/*",
    "tests/*",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
forced_separate = "supa"
skip = ["venv", "src/supa/grpc_nsi"]
default_section = "THIRDPARTY"

[tool.black]
line-length = 120
target-version = ["py38"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | src/supa/grpc_nsi
    | build
  )/
)
'''

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs= true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
exclude = [
    "src/supa/nrm/backends/nso_service_model",
]

[[tool.mypy.overrides]]
module = [
    "supa.grpc_nsi.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[tool.ruff]
lint.exclude = [
    ".git",
    ".cache",
    ".eggs",
    "__pycache__",
    "venv",
    ".venv",
]
lint.ignore = [
    "D100",
    "D104",
    "T201",
]
lint.select = [
    "ANN",
    "ARG",
    "B",
    "C",
    "D",
    "E",
    "F",
    "I",
    "N",
    "PGH",
    "PTH",
    "RET",
    "RUF",
    "S",
    "T",
    "W",
    "Q",
]
line-length = 120
target-version = "py311"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party=[]

[tool.ruff.lint.mccabe]
# Explicitly set default to 7, so we can later lower this threshold once all 6+ issues are solved.
max-complexity = 7
