[build-system]
# Part of the installation process is the generation of Python code from protobuf/gRPC definitions.
# For that we need to have `grpcio-tools` around *before* `setup.py` is executed. The version number of `grpcio-tools`
# should match that of `grpcio` in `setup.cfg`. Actual code generation is done from within `setup.py` in a custom
# Command class.
requires = [
    "setuptools>=65.5.0",
    "wheel",
    "grpcio-tools==1.78.0",
    "mypy_protobuf",
]
build-backend = "buildtools.backend"
backend-path = ["src/supa"]


[project]
name = "supa"
version = "0.4.5.dev1"
dependencies = [
  "grpcio==1.80.0",
  "mypy-protobuf==5.0.0",
  "structlog==25.5.0",
  "colorama==0.4.6",
  "click==8.3.1",
  "pydantic-settings==2.13.1",
  "python-statemachine==2.6.0",
  "sqlalchemy==2.0.48",
  "apscheduler==3.11.2",
  "tabulate==0.10.0",
  "more-itertools==10.8.0",
  "protobuf==6.33.6",
  "python-nso-client==0.1.3",
  "requests==2.32.5",
  "lxml==6.0.2",
  "lxml-stubs==0.5.1",
  "cherrypy==18.10.0",
  "htmlgen==2.0.0",
  "paramiko==4.0.0",
  "pytz==2026.1.post1",
  "grpcio-tools==1.78.0",
  "psycopg2-binary==2.9.11",
]
requires-python = ">=3.12,<3.15"
authors = [
    {name = "Guido Kollerie", email = "guido@kollerie.com"},
    {name = "Hans Trompert", email = "hans.trompert@surf.nl"},
]
maintainers = [
    {name = "Hans Trompert"},
]
description = "The SURF ultimate Provider Agent (SuPA)"
readme = "README.rst"
keywords = [
    "NSI",
    "Python",
    "uPA",
    "NSA",
    "gRPC",
    "protobuf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
license = "Apache-2.0"
license-files = ["LICENSE.txt"]

[project.urls]
#Homepage = "https://example.com"
Documentation = "https://workfloworchestrator.org/SuPA"
Repository = "https://github.com/workfloworchestrator/SuPA.git"
Issues = "https://github.com/workfloworchestrator/SuPA/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "bandit==1.9.4",
    "grpc-stubs==1.53.0.6",
    "grpcio-tools==1.78.0",
    "mypy==1.20.0",
    "pip-tools==7.5.3",
    "pre-commit==4.5.1",
    "protobuf==6.33.6",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-grpc==0.8.0",
    "pytest-xdist==3.8.0",
    "ruff==0.15.8",
    "types-paramiko==4.0.0.20260322",
    "types-pytz==2026.1.1.20260304",
    "types-requests==2.33.0.20260327",
    "types-setuptools==82.0.0.20260210",
    "types-tabulate==0.10.0.20260308",
    "tzdata==2025.3",
]
doc = [
    "sphinx==9.1.0",
    "sphinx-click==6.2.0",
    "sphinx-rtd-theme==3.1.0",
]

[project.scripts]
supa = "supa.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"supa.protos" = ["*.proto"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"etc/supa" = ["supa.env", "src/supa/nrm/backends/*.env"]

[tool.pytest]
minversion = "9.0"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = [
    "src/supa",
]
omit = [
    "src/supa/grpc_nsi/*",
    "tests/*",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs= true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
exclude = [
    "src/supa/nrm/backends/nso_service_model",
]

[[tool.mypy.overrides]]
module = [
    "supa.grpc_nsi.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "A",    # Builtins
    "B",    # Bugbear
    "C4",   # Comprehensions
    "D",    # Docstrings
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "G",    # Logging format
    "I",    # Isort
    "ISC",  # Implicit string concat
    "S",    # Bandit
    "T20",  # Print
    "W",    # pycodestyle Warning
    # "UP",   # Pyupgrade
]

# Match flake8-docstrings default behavior
pydocstyle.convention = "google" # or "numpy" / "pep257"
exclude = [
    ".git",
    ".cache",
    ".eggs",
    "__pycache__",
    "venv",
    ".venv",
    "src/supa/nrm/backends/nso_service_model/*",
]
ignore = [
    "D100",
    "D104",
    "T201",
    "S101",
]
